<resources>
    <string name="app_name">MVP_MODE</string>
    <string name="news_title">新闻</string>
    <string name="news_photo">图片</string>
    <string name="news_video">视频</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="about">关于</string>
    <string name="communicate">Communicate</string>
    <string name="nav_mode">夜间模式</string>
    <string name="load_error">加载失败(m´・ω・｀)m</string>
    <string name="db_error">数据库出错了(つд⊂)</string>
    <string name="internet_error">网络异常,请检查网络设置|･ω･｀)</string>
    <string name="news_from">%1$s %2$s</string>

    <!-- 共享过度动画-->
    <string name="transition_photos">transition_animation_news_photo</string>
    <string name="no_more">没有更多了</string>
    <string name="loading">加载中</string>
    <string name="retry_refresh_news">重新加载</string>

    <!--新闻pdao-->
    <string name="channel_manage">频道管理</string>
    <string name="channel_explain">点击可增删/长按并拖拽排序</string>
    <string name="my_channel">我的频道</string>
    <string name="more_channel">更多频道</string>
    <string name="photos">照片</string>
    <string name="photos_detail_title">%1$d/%2$d　%3$s</string>
    <string name="retry_after">清稍后重试</string>
    <string name="share">分享</string>
    <string name="share_contents">来自「杨放」的分享：%1$s %2$s</string>
    <string name="web_view">WebView</string>
    <string name="browser">用浏览器打开</string>
    <string name="photo">妹纸</string>
    <string name="share_error">分享失败</string>
    <string name="picture_alerady_save_to">图片已经保存</string>
    <string name="set_waller_success">换肤成功</string>
    <string name="save">保存图片</string>
    <string name="set_wallpaper">设为壁纸</string>
</resources>
