<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_news_channel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.demo.panguso.mvp_mode.mvp.ui.activities.NewsChannelActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/action_bar"
        android:background="@color/colorPrimary"
        app:navigationIcon="@mipmap/ic_arrow_back"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/channel_manage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/channel_explain"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/medium" />

    <TextView
        style="@style/news_channel_sort_title"
        android:text="@string/my_channel" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/news_channel_mine_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never" />

    <TextView
        style="@style/news_channel_sort_title"
        android:text="@string/more_channel" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/news_channel_more_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never" />
</LinearLayout>
